--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
-WppFolder/*
-Grafic/*
+# Python / Bytecode
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.venv
+venv/
+ENV/
 
-src/__pycache__/
+# Environment Variables
+.env
+
+# Project Specific Data
+WppFolder/*
+!WppFolder/.gitkeep
+Grafic/*
+!Grafic/.gitkeep
+*.csv
